--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-md text-center hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
                     <div class="bg-green-100 w-16 h-16 mx-auto rounded-full flex items-center justify-center mb-4 overflow-hidden">
-                        <img src="http://static.photos/garden/320x240/8" alt="Tomato Plant" class="w-full h-full object-cover">
+                        <img src="https://image2url.com/images/1758817706751-7be44e0f-2ae9-4d81-8072-34771ff607d3.png" alt="Tomato Plant" class="w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Horticulture</h3>
                     <p class="text-gray-600">
@@ -219,7 +219,7 @@
                             <img src="https://image2url.com/images/1758748218852-245064c8-924a-47d2-9d2b-0b41da685abb.png" alt="Heartland Application" class="h-full object-contain">
                         </div>
                         <h3 class="text-xl font-semibold mb-2 text-center">Heartland Application</h3>
-                        <a href="https://www.heartlandapplication.com" target="_blank" class="text-green-600 hover:text-green-800 text-sm font-medium flex items-center justify-center">
+                        <a href="https://www.heartlandapplications.com" target="_blank" class="text-green-600 hover:text-green-800 text-sm font-medium flex items-center justify-center">
                             Visit Website <i data-feather="external-link" class="w-4 h-4 ml-1"></i>
                         </a>
                     </div>
@@ -249,7 +249,7 @@
                 <div class="brand-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <div class="p-6">
                         <div class="h-40 flex items-center justify-center mb-4">
-                            <img src="http://static.photos/garden/320x240/7" alt="Buttheadz Soil" class="h-full object-contain">
+                            <img src="https://image2url.com/images/1758814015124-5e835fd6-a0d7-403f-a6fb-233cb4671c5a.jpg" alt="Buttheadz Soil" class="h-full object-contain">
                         </div>
                         <h3 class="text-xl font-semibold mb-2 text-center">Buttheadz Soil</h3>
                         <a href="https://www.buttheadzsoil.com" target="_blank" class="text-green-600 hover:text-green-800 text-sm font-medium flex items-center justify-center">
@@ -353,14 +353,14 @@
                                 <i data-feather="mail" class="mr-4 mt-1"></i>
                                 <div>
                                     <h4 class="font-semibold mb-1">Email</h4>
-                                    <p>info@midwestorganics.com</p>
+                                    <p>info@midwestorganicsinc.com</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i data-feather="phone" class="mr-4 mt-1"></i>
                                 <div>
                                     <h4 class="font-semibold mb-1">Phone</h4>
-                                    <p>(573) 471-1003</p>
+                                    <p>(573) 472-7886</p>
                                 </div>
                             </div>
                         </div>
