--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-8 md:mb-0 md:pr-8" data-aos="fade-right">
-                    <img src="http://static.photos/agriculture/640x360/5" alt="Midwest Organics Farm" class="rounded-lg shadow-xl w-full">
+                    <img src="https://image2url.com/images/1758821904717-25504a27-290e-492b-9dcd-2bc8b6eaf737.png" alt="Midwest Organics Farm" class="rounded-lg shadow-xl w-full">
                 </div>
                 <div class="md:w-1/2" data-aos="fade-left">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Rooted in Missouri Since 2015</h3>
