--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-lg shadow-md text-center hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="100">
                     <div class="bg-green-100 w-16 h-16 mx-auto rounded-full flex items-center justify-center mb-4 overflow-hidden">
-                        <img src="http://static.photos/animals/320x240/15" alt="Animal Clip Art" class="w-full h-full object-cover">
+                        <img src="https://image2url.com/images/1758822280992-3fdf29a5-1c8b-4b0c-bb45-40ce5c8917e0.png" alt="Animal Clip Art" class="w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Pet Products</h3>
                     <p class="text-gray-600">
@@ -157,8 +157,8 @@
                     </p>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-md text-center hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="300">
-                    <div class="bg-green-100 w-16 h-16 mx-auto rounded-full flex items-center justify-center mb-4">
-                        <i data-feather="truck" class="text-green-600 w-8 h-8"></i>
+                    <div class="bg-green-100 w-16 h-16 mx-auto rounded-full flex items-center justify-center mb-4 overflow-hidden">
+                        <img src="https://image2url.com/images/1758822522288-1a12541a-a2f6-4ae9-a334-1c979c784850.png" alt="Truck" class="w-full h-full object-cover">
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Agriculture</h3>
                     <p class="text-gray-600">
